--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@
 	/* font-family: "Poppins", sans-serif; */
 	font-family: "Lato", sans-serif;
 }
+
+:root {
+	--primary: #8cc63f;
+	--secondary: #3e84b6;
+}
